Quadratic Forms, Projections, Generalised Inverses (not completed)

--- a/tex/Algebra/Group Theory.tex
+++ b/tex/Algebra/Group Theory.tex
@@ -829,7 +829,7 @@
 		with the result that,
 		\[ ba = \phi(a)b \]
 		so that we can think of conjugation of $a$ by $b$ as the way that we need to change $a$ if we want to move the multiplication by $b$ to the other side.
-	}
+	}\label{def:conjugation}
 	This is an automorphism (known as an \textit{inner automorphism}) because it
 	\begin{itemize}
 		\item{is compatible with law of composition, 
@@ -1204,7 +1204,7 @@
 	\boxeddefinition{A subgroup $N$ of a group $G$ is called a \textbf{normal subgroup} if it has the property that,
 		\[ \forall \, a \in N, b \in G, \; ba\inv{b} \in N  \]
 		which is to say, that the conjugate by any element of $G$ of any element in $N$ is also in $N$.
-	}
+	}\label{def:normal-subgroup}
 
 	\labeledProposition{A subset $H$ of a group $G$ is normal if and only if every left coset is also a right coset. If $H$ is normal then,
 		\[ \forall a \in G, \, aH = Ha. \]}{normal_subgroups_equal_cosets}
