--- a/tex/Calculus/Difference Equations and Differential Equations.tex
+++ b/tex/Calculus/Difference Equations and Differential Equations.tex
@@ -573,7 +573,7 @@
 		
 		But, since we are looking for real-valued solutions and any linear combination of the homogeneous solutions is also a homogeneous solution, we can generate other, real-valued homogeneous solutions from linear combinations of these ones. In fact, we can just divide the imaginary solution by $i$ so that our real-valued solution is:
 		\[ (\sqrt{-b})^t\, (C_3\cos(\theta t) + C_4 \sin(\theta t)) +  \frac{c}{a+b-1}. \]
-		\TODO{eh? if divide by $i$ then the real part will be divided by $i$ also}
+		\TODO{eh? if divide by $i$ then the real part will be divided by $i$ also}(answer: \ref{prop:linear-span-of-conjugate-pair-vectors-is-span-of-real-and-imaginary-parts})
 		
 	}
 
@@ -1726,6 +1726,7 @@
 	
 		This means that we can also express the general solution using only one of the eigenvalues/vectors as,
 		\[ c_3 \, \operatorname{Re}(\v_1 \, e^{\lambda_1 t}) + c4 \, \operatorname{Im}(\v_1 \, e^{\lambda_1 t}). \]
+		(see: \ref{prop:linear-span-of-conjugate-pair-vectors-is-span-of-real-and-imaginary-parts})
 		
 		\biggerskip
 		\subsubsubsection{IVP}
