--- a/tex/Foundations/Axioms.tex
+++ b/tex/Foundations/Axioms.tex
@@ -30,7 +30,7 @@
 		However, the first-order logic that is the standard for the logical formalization of mathematics is not able to model infinite domains as the \href{https://en.wikipedia.org/wiki/Compactness_theorem}{Compactness Theorem} implies that first-order logic cannot uniquely determine infinite sets. We cannot, therefore, use the same logical approach to formalize a choice from an infinite number of sets. For this reason the capability needs to be introduced as an axiom.
 		
 		\bigskip
-		\subsubsection{The Axiom of Choice}
+		\subsubsection{The Axiom of Choice}\label{sssection:axiom-of-choice}
 		\boxeddefinition{Let $A$ be a non-empty set of non-empty sets. A \textbf{choice function} on $A$ is a function,
 			\[ f: A \longmapsto \bigcup_{a \in A} \suchthat \forall a \in A, \; f(a) \in a. \]
 		}
