--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -25,6 +25,10 @@
 	\subfile{"\algebraDir/Vector Spaces"}
 	\newpage	
 	\subfile{"\algebraDir/Linear Transformations"}
+	\newpage
+	\subfile{"\algebraDir/Inner Product Spaces"}
+	\newpage
+	\subfile{"\algebraDir/Affine Spaces and Transformations"}
 	
 	
 	\subfile{"\analysisDir/Analysis"}
