--- a/tex/reference/code examples.tex
+++ b/tex/reference/code examples.tex
@@ -40,6 +40,7 @@
 	\begin{figure}[h!]
 		\includegraphics[width=\linewidth]{\resourceDir/img/not_closed_under_addition.png}
 		\caption{The blue arrows are vectors whose scalar multiples will all be in the same line as the blue arrows but the red arrow shows what happens if we add them; the result lies outside of both lines.}
+		\label{fig:label-must-go-here}
 	\end{figure}
 	
 	\subsection{Tables}
