--- a/tex/Algebra/Matrices.tex
+++ b/tex/Algebra/Matrices.tex
@@ -1,38 +1,38 @@
 \documentclass[../MathsNotesBase.tex]{subfiles}
 
-\newcommand{\exampleMatrixTwoDTransform}{
-We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D transformation matrix $A$, into its image in the destination space, $Y$ in $\R{2}$.
-	\begin{align*}
-	A =
-	\begin{bmatrix}    
-	3  &   2 \\
-	1  &   4 \\		
-	\end{bmatrix}
-	,\; X = 
-	\begin{bmatrix}  
-	0   &  1  &   1  &   0 \\
-	0   &  0  &   1  &   1	\\	
-	\end{bmatrix} \\[10pt]
-	AX = Y = 
-	\begin{bmatrix}   
-	0  &   3  &   5  &   2 \\
-	0  &   1  &   5  &   4	\\
-	\end{bmatrix}
-	\end{align*}
-	
-	\begin{center}
-	\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/linear_transformation.png}
-	\end{center}
-}
-
-
 \date{\vspace{-6ex}}
 
 
 \begin{document}
 \searchableSection{Matrices}{linear algebra}
 
-	\searchableSubsection{Basic Algebra of Matrices}{linear algebra}{
+	\newcommand{\exampleMatrixTwoDTransform}{
+		We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D transformation matrix $A$, into its image in the destination space, $Y$ in $\R{2}$.
+		\begin{align*}
+			A =
+			\begin{bmatrix}    
+				3  &   2 \\
+				1  &   4 \\		
+			\end{bmatrix}
+			,\; X = 
+			\begin{bmatrix}  
+				0   &  1  &   1  &   0 \\
+				0   &  0  &   1  &   1	\\	
+			\end{bmatrix} \\[10pt]
+			AX = Y = 
+			\begin{bmatrix}   
+				0  &   3  &   5  &   2 \\
+				0  &   1  &   5  &   4	\\
+			\end{bmatrix}
+		\end{align*}
+		
+		\begin{center}
+			\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/linear_transformation.png}
+		\end{center}
+	}
+	
+
+	\searchableSubsection{Basic Operations on Matrices}{linear algebra}{
 		\bigskip\bigskip
 	
 		\boxeddefinition{Matrix \textbf{equality} is defined component-wise so that if $A = B$ then $A$ and $B$ must have the same dimension as well as equal values in each component.}
@@ -519,6 +519,33 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 										= \conj{A} \, \conj{\v}. \qedhere
 			\end{aligned}\]
 		\end{proof}
+	
+	
+		\biggerskip
+		\subsubsection{Hermitian Conjugate (a.k.a. Conjugate Transpose, a.k.a Adjoint)}
+		\boxeddefinition{If $A$ is a matrix in ${ \C{n \times n} }$ then the \textbf{hermitian conjugate} of $A$ is defined as
+			\[ A^* = \conj{A}^T. \]
+			The term "adjoint" is also often used to refer to the hermitian conjugate but this name is also used for the transpose of the cofactor matrix (see: \href{https://en.wikipedia.org/wiki/Adjugate_matrix}{wikipedia}).
+		}\label{def:hermitian-conjugate}
+		
+		\notation{The \textbf{hermitian conjugate} of $A$ is commonly denoted $A^*$ or $A^H$.}
+		
+		\note{Since the two operations to form the hermitian conjugate --- conjugation and transposition --- commute with each other, the conjugation doesn't affect the usual properties of the matrix transpose. So we have:
+			\begin{itemize}
+				\item{${ (A^*)^* = A }$ (compare ${ (A^T)^T = A }$)}
+				\item{${ (A + B)^* = A^* + B^* }$ (compare \autoref{prop:matrix-transpose-distributes-over-addition})}
+				\item{${ (AB)^* = B^* A^* }$ (compare \autoref{prop:transpose-of-product-is-reverse-product-of-transposes})}
+			\end{itemize}
+		}
+		
+		\medskip
+		\labeledProposition{For a matrix $A$ over a field $\F{}$ which may be the reals or the complex field, for a scalar ${ k \in \F{} }$,
+			\[ (k A)^* = \conj{k} A^*. \]
+		}{hermitian-conj-of-scalar-x-matrix-is-conj-of-scalar-x-hermitian-conj-of-matrix}
+		\begin{proof}
+			Using the fact that a scalar is invariant under transposition and the properties of the complex conjugate \ref{prop:complex-conjugate-properties},
+			\[ (k A)^* = \conj{(k A)^T} = \conj{k A^T} = \conj{k} \conj{A^T}. \]
+		\end{proof}
 	}
 
 
@@ -615,7 +642,8 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		
 		\bigskip\bigskip
 		\subsubsection{Diagonal Matrices}
-		\boxeddefinition{A \textbf{diagonal} matrix is a matrix whose entries outside the main diagonal are all zero.}
+		\boxeddefinition{A \textbf{diagonal} matrix is a matrix whose entries outside the main diagonal are all zero.}\label{def:diagonal-matrix}
+		
 		\note{\begin{itemize}
 				\item{The definition of a diagonal matrix does \textbf{not} require that all the diagonal entries are nonzero so, for example, the zero matrix is a diagonal matrix.}
 				\item{Diagonal matrices are \textbf{usually understood to be} a subset of symmetric matrices but this is not strictly necessary as the definition of the main diagonal permits an interpretation that includes rectangular matrices (see \href{https://en.wikipedia.org/wiki/Diagonal_matrix}{wikipedia}).
@@ -659,7 +687,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{proof}
 		\begin{corollary}
 			\label{coro:square_diagonal_matrices_with_nonzero_diag_entries_invertible}
-			Square diagonal matrices with nonzero diagonal entries are invertible.
+			Square diagonal matrices with only nonzero diagonal entries are invertible.
 		\end{corollary}
 		\begin{proof}
 			A result of the multiplication described in \autoref{prop:multiplying_square_diagonal_matrices_multiplies_their_diagonal_entries} is that, if $A$ is a square diagonal matrix with nonzero diagonal entries, then we can obtain the identity matrix by multiplication with a matrix $B$ whose diagonal elements are the reciprocal of the corresponding entries in $A$. So, if the $jj$th entry in $A$ is $a_{jj}$, then the corresponding entry in $B$ is $1/a_{jj}$. For example,
@@ -690,47 +718,31 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		
 		
 		\bigskip
-		\labeledProposition{Square diagonal matrices with nonzero diagonal entries form an abelian group under multiplication.}{}
+		\labeledProposition{Square diagonal matrices with only nonzero diagonal entries form an abelian group under multiplication.}{square-diagonal-matrices-form-abelian-group}
 		\begin{proof}
 			Let $S$ be the set of ${ n \times n }$ diagonal matrices with nonzero diagonal entries. Then,
 			\begin{itemize}
 				\item{${ I_n \in S }$ so $S$ is nonempty.}
 				\item{By \autoref{prop:multiplying_square_diagonal_matrices_multiplies_their_diagonal_entries}, if $A,B$ are members of $S$, then $AB$ is also a square diagonal matrix with nonzero diagonal entries and so is also a member of $S$.}
 				\item{By \ref{coro:square_diagonal_matrices_with_nonzero_diag_entries_invertible} members of $S$ are invertible and are members of $S$.}
+				\item{By \ref{coro:multiplication_of_square_diagonal_matrices_is_commutative} multiplication of members of $S$ is commutative.}
 			\end{itemize}
 			Therefore, ${ S \leq GL_n(\F{}) }$.
 		\end{proof}
 	
 	
-		\biggerskip
-		\subsubsection{Hermitian Conjugate (a.k.a. Conjugate Transpose, a.k.a Adjoint)}
-		\boxeddefinition{If $A$ is a matrix in ${ \C{n \times n} }$ then the \textbf{hermitian conjugate} of $A$ is defined as
-			\[ A^* = \conj{A}^T. \]
-			The term "adjoint" is also often used to refer to the hermitian conjugate but this name is also used for the transpose of the cofactor matrix (see: \href{https://en.wikipedia.org/wiki/Adjugate_matrix}{wikipedia}).
-		}\label{def:hermitian-conjugate}
 	
-		\notation{The \textbf{hermitian conjugate} of $A$ is commonly denoted $A^*$ or $A^H$.}
-		
-		\note{Since the two operations to form the hermitian conjugate --- conjugation and transposition --- commute with each other, the conjugation doesn't affect the usual properties of the matrix transpose. So we have:
-			\begin{itemize}
-				\item{${ (A^*)^* = A }$ (compare ${ (A^T)^T = A }$)}
-				\item{${ (A + B)^* = A^* + B^* }$ (compare \autoref{prop:matrix-transpose-distributes-over-addition})}
-				\item{${ (AB)^* = B^* A^* }$ (compare \autoref{prop:transpose-of-product-is-reverse-product-of-transposes})}
-			\end{itemize}
+	
+		\biggerskip
+		\subsubsection{Self-adjoint}
+		\boxeddefinition{A \textit{self-adjoint operator} on a finite-dimensional complex vector space $V$ with inner product ${ \inner{\cdot}{\cdot} }$ is a linear map $A$ such that,
+			\[ \inner{A\v}{\w} = \inner{\v}{A\w}. \]
 		}
 	
-		\medskip
-		\labeledProposition{For a matrix $A$ over a field $\F{}$ which may be the reals or the complex field, for a scalar ${ k \in \F{} }$,
-			\[ (k A)^* = \conj{k} A^*. \]
-		}{hermitian-conj-of-scalar-x-matrix-is-conj-of-scalar-x-hermitian-conj-of-matrix}
-		\begin{proof}
-			Using the fact that a scalar is invariant under transposition and the properties of the complex conjugate \ref{prop:complex-conjugate-properties},
-			\[ (k A)^* = \conj{(k A)^T} = \conj{k A^T} = \conj{k} \conj{A^T}. \]
-		\end{proof}
 	
 		
 		\biggerskip
-		\subsubsection{Hermitian Matrix}
+		\subsubsection{Hermitian Matrices}
 		\boxeddefinition{A matrix $A$ is a \textbf{hermitian matrix} iff it is equal to its hermitian conjugate, i.e.
 			\[ A = A^*. \]
 		}\label{def:hermitian-matrix}
@@ -743,8 +755,21 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 			\[ A^* = \conj{A}^T = A. \qedhere \]
 		\end{proof}
 	
+		\medskip
+		\labeledProposition{If $V$ is a finite-dimensional complex vector space with an orthonormal basis defined and $A$ is a matrix \wrt the orthonormal basis then, $A$ is self-adjoint iff $A$ is hermitian. That's to say,
+			\[ \inner{A\v}{\w} = \inner{\v}{A\w} \iff A = A^*. \]
+		}{hermitian-matrix-over-finite-complex-space-with-standard-inner-product-is-self-adjoint}
+		\begin{proof}
+			\[ \inner{A\v}{\w} =  = \w^* A^* \v =  \]
+			\[\begin{aligned}
+				&& \inner{A\v}{\w} &= \inner{\v}{A\w} &\sidecomment{by self-adjoint property}\\
+				&\iff & \w^* A \v &= (A\w)^* \v &\sidecomment{by standard complex inner product} \\
+				&\iff & \w^* A \v &= \w^* A^* \v.
+			\end{aligned}\]
+			Then, by \autoref{prop:quadratic-forms-equal-for-all-vectors-in-space-implies-matrices-are-equal}, this implies that ${ A = A^* }$ which is the hermitian property. Clearly, the same reasoning can also be applied in reverse.
+		\end{proof}
+	
 		\biggerskip
-		\subsubsubsection{Example}
 		\begin{exe}
 			\ex{An example of a hermitian matrix is
 				\[
@@ -757,6 +782,321 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 				The diagonal entries must always be real because they need to be equal to their conjugates while the off diagonal entries must be the conjugates of their corresponding entries across the diagonal (i.e. ${ a_{ij} = \conj{a_{ji}} }$).
 			}	
 		\end{exe}
+	
+	
+	
+		\biggerskip
+		\subsubsection{Unitary Matrices}
+		\boxeddefinition{\textbf{(Unitary Matrix)} A matrix ${ A \in \C{n \times n} }$ is said to be \textit{unitary} iff 
+			\[ A^* A = A A^* = I. \]
+		}\label{def:unitary-matrix}
+		
+		\medskip
+		\labeledProposition{A matrix $A$ is unitary iff:
+			\begin{enumerate}[label=(\roman*)]
+				\item{$A^*$ is also unitary.}
+				\item{If another matrix $B$ is also unitary then the product $AB$ is unitary.}
+			\end{enumerate}
+		}{properties-of-unitary-matrix}
+		\begin{proof}\nl
+			\begin{enumerate}[label=(\roman*)]
+				\item{If we let ${ C = A^* }$ then ${ A = C^* }$ and ${ C C^* = I }$ which means that ${ C = A^* }$ is unitary. Clearly this logic also works in reverse so that $A$ is unitary $\iff A^*$ is unitary
+					\[ A \text{ is unitary} \iff A^* \text{ is unitary}. \]
+				}
+				\item{If we assume that both $A$ and $B$ are unitary then, using the properties of the hermitian conjugate (\ref{def:hermitian-conjugate}) in addition to the unitary property,
+					\[ (AB)(AB)^* = (AB)(B^*A^*) = A(BB^*)A^* = AA^* = I \]
+					which shows that their product $AB$ is unitary.\\
+					Conversely, if we assume only that $B$ is unitary then, if the product $AB$ is unitary, this implies that
+					\[ (AB)(AB)^* = A(BB^*)A^* = AA^* = I \]
+					and so, as a result, $A$ is also shown to be unitary. (\TODO{does this prove the inverse exists on both sides?})
+				}
+			\end{enumerate}
+		\end{proof}
+	
+		\bigskip
+		\labeledProposition{A real unitary matrix is orthogonal.}{real-unitary-matrix-is-orthogonal}
+		\begin{proof}
+			If $A$ is real then ${ \conj{A} = A \implies A^* = \conj{A}^T = A^T }$. Therefore,
+			\[ A^* = A \iff A^T = A. \]
+			That's to say, for a real matrix, the unitary property is equivalent to the orthogonal property.
+		\end{proof}
+	
+		\bigskip
+		\labeledTheorem{\textbf{(Schur Decomposition)} Let ${ A \in \C{n \times n} }$ be an arbitrary square matrix. Then $A$ is unitarily similar to an upper triangular matrix. That's to say, there exists a unitary matrix ${ U \in \C{n \times n} }$ such that
+			\[ T = U^* A U \]
+			is upper triangular.
+		}{schur-decomposition}
+		\begin{proof}
+			Let $\v_1$ be an eigenvector of $A$ (which we know exists by \autoref{prop:num-eigenvalues}) corresponding to the eigenvalue $\lambda_1$ and normalise it to the unit vector $\u_1$. If we extend $\u_1$ to a basis of the space ${ \u_1,\v_2,\dots,\v_n }$ then, by Gram-Schmidt (\ref{sssection:gram-schmidt-orthonormalisation}), we can obtain an orthonormal basis of the space ${ B = \{ \u_1,\u_2,\dots,\u_n \} }$. Let $U_0$ be the matrix whose columns are the elements of $B$. By \autoref{prop:matrix-is-unitary-iff-columns-are-orthonormal-basis} then, $U_0$ is unitary.\\
+			
+			Furthermore, if the matrix $A$ is expressed \wrt the basis $B$,
+			\[ 
+				{U_0}^* A U_0 = \begin{bmatrix}
+									\lambda_1 & * \\
+									0		  & A_1
+								\end{bmatrix}
+			\]
+			then the block $A_1$ is an ${ (n - 1) \times (n - 1) }$ matrix. We can then recurse on the matrix $A_1$ by applying the same technique to obtain a unitary ${ (n - 1) \times (n - 1) }$ matrix $U_1$ such that,
+			\[
+				{U_1}^* A_1 U_1 = 	\begin{bmatrix}
+										\lambda_2 & * \\
+										0		  & A_2
+									\end{bmatrix}.
+			\]
+			If we let
+			\[ 
+				U = U_0 \begin{bmatrix}
+							1 & 0 \\
+							0 & U_1
+						\end{bmatrix} 
+			\]
+			then the matrix $U$ is unitary because,
+			\[
+				\begin{bmatrix}
+				 	1 & 0 \\
+				 	0 & U_1
+				\end{bmatrix}
+			 	\begin{bmatrix}
+			 		1 & 0 \\
+			 		0 & U_1
+			 	\end{bmatrix}^* = 
+		 		\begin{bmatrix}
+		 			1 & 0 \\
+		 			0 & U_1
+		 		\end{bmatrix}
+		 		\begin{bmatrix}
+		 			1 & 0 \\
+		 			0 & {U_1}^*
+		 		\end{bmatrix} =
+	 			\begin{bmatrix}
+	 				1 & 0 \\
+	 				0 & {U_1}^* \, U_1
+	 			\end{bmatrix} =
+	 			\begin{bmatrix}
+	 				1 & 0 \\
+	 				0 & 1
+	 			\end{bmatrix}
+			\]
+			so that $U$ is a product of unitary matrices which, by \autoref{prop:properties-of-unitary-matrix}, is unitary. If we apply the matrix $U$ to the original matrix $A$,
+			\[
+				U^* A U = 	\begin{bmatrix}
+								\lambda_1 & * 		  & * \\
+								0		  & \lambda_2 & * \\
+								0 		  & 0		  & A_2
+							\end{bmatrix}. 
+			\]
+			We can proceed in this way until we obtain,
+			\[
+				U^* A U = 	\begin{bmatrix}
+								\lambda_1 & * 		  & * 	   & * \\
+								0		  & \lambda_2 & * 	   & * \\
+								0 		  & 0		  & \ddots & * \\
+								0		  & 0		  & 0	   & \lambda_n
+							\end{bmatrix}
+			\]
+			which is an upper-triangular matrix.
+		\end{proof}
+		\note{Compare this proof with \autoref{prop:complex_space_exists_basis_st_matrix_is_upper_triang}.}
+	
+	
+	
+		\biggerskip
+		\subsubsection{Normal Matrices}
+		\boxeddefinition{\textbf{(Normal Matrix)} A square matrix $A$ is called \textit{normal} iff
+			\[ A A^* = A^* A. \]
+			That's to say, the matrix $A$ commutes with its hermitian conjugate (\ref{def:hermitian-conjugate}).
+		}\label{def:normal-matrix}
+		\note{Compare with normal subgroups in Group Theory \ref{def:normal-subgroup}.}
+		
+		\medskip
+		\labeledProposition{The following classes of matrix are all normal:
+			\begin{enumerate}[label=(\roman*)]
+				\item{Hermitian matrices (\ref{def:hermitian-matrix})}
+				\item{Unitary matrices (\ref{def:unitary-matrix})}
+				\item{Diagonal matrices (\ref{def:diagonal-matrix})}
+			\end{enumerate}
+		}{common-classes-of-normal-matrices}
+		\begin{proof}
+			\begin{enumerate}[label=(\roman*)]
+				\item{${ A A^* = A A = A^* A. }$}
+				\item{${ A A^* = I = A^* A. }$}
+				\item{If a matrix $D$ is diagonal then we can define it as
+					\[ D = \operatorname{diag}(a_1, a_2, \dots, a_n) \]
+					where the scalars ${ a_i \eqword{for} 1 \leq i \leq n }$ are the entries on the main diagonal and, by definition, all the other entries are 0. Then, since diagonal matrices are symmetric and so invariant to taking the transpose,
+					\[ D^* = \conj{D}^T = \operatorname{diag}(\conj{a_1}, \conj{a_2}, \dots, \conj{a_n}). \]
+					Since both $D$ and $D^*$ are diagonal we can use \ref{coro:multiplication_of_square_diagonal_matrices_is_commutative} to deduce that,
+					\[ D D^* = D^* D. \]
+				}
+			\end{enumerate}
+		\end{proof}
+	
+		\bigskip
+		\labeledProposition{A normal upper-triangular matrix is diagonal.}{normal-upper-triangular-matrix-is-diagonal}
+		\begin{proof}
+			Let $A$ be a normal upper-triangular matrix and let $a_{ij}$ denote the $i,j$-th entry of $A$. Using the normal property of $A$ we have,
+			\[\begin{aligned}
+				&& A A^* &= A^* A \\[4pt]
+				&\iff & \e{i}^T A A^* \e{j} &= \e{i}^T A^* A \e{j} &\sidecomment{} \\[4pt]
+				&\iff & (A^* \e{i})^* (A^* \e{j}) &= (A \e{i})^* (A \e{j}).
+			\end{aligned}\]
+			If we let ${ j = i }$ then this last result gives us
+			\[\begin{aligned}
+				&& (A^* \e{i})^* (A^* \e{i}) &= (A \e{i})^* (A \e{i}) \\[4pt]
+				&\iff & \norm{A^* \e{i}}^2 &= \norm{A \e{i}}^2 &\sidecomment{} \\[4pt]
+				&\iff & \norm{A^* \e{i}} &= \norm{A \e{i}} &\sidecomment{} \\[4pt]
+				&\iff & \norm{A^T \e{i}} &= \norm{A \e{i}}. &\sidecomment{${ \because \norm{\conj{z}} = \norm{z} }$}
+			\end{aligned}\] 
+			In other words, the norm of the $i$-th row is equal to the norm of the $i$-th column. If we now look at the upper-triangular property we see that:
+			\begin{itemize}
+				\item{The first column of $A$, by the upper-triangular property, must consist solely of the $a_{11}$ entry. Since the norm of the first row is equal to the norm of the first column, the first row must also consist solely of this element $a_{11}$.}
+				\item{Then the second column of $A$, by the upper-triangular property, must have only zeroes after the element in the second row $a_{22}$. But we have also just shown that the first row is all zeroes after the first element so we know also that ${ a_{21} = 0 }$. Therefore, the second column exists solely of the element $a_{22}$ and by a similar reasoning to the above, the norm implies that the second row must also consist solely of the entry $a_{22}$.}
+				\item{Continuing reasoning in this way for the remaining columns of $A$ we show that $A$ is diagonal.}
+			\end{itemize}
+		\end{proof}
+	
+		\biggerskip
+		\begin{exe}
+			\ex{The matrix
+				\[ 
+					\begin{bmatrix}
+						i & 0\\
+						0 & i
+					\end{bmatrix} 
+				\]
+				is unitary and normal (because it's diagonal) but not hermitian. On the other hand, the matrix
+				\[ 
+					\begin{bmatrix}
+						2i & 0\\
+						0 & i
+					\end{bmatrix} 
+				\]
+				is --- being diagonal --- normal but is not unitary or hermitian.
+			}
+		\end{exe}
+	
+	
+		\biggerskip
+		\subsubsection{Similarity and Equivalence of Matrices}
+		\boxeddefinition{\textbf{(Matrix Similarity)} If $A$ and $B$ are two \textit{square} ${ n \times n }$ matrices then they are said to be \textit{similar} iff there exists an ${ n \times n }$ invertible matrix $P$ such that,
+			\[ AP = PB \iff A = PB\inv{P}. \]
+			
+			Similar matrices represent the same linear operator under different bases, with $P$ being the change of basis matrix. In $GL_n{\F{}}$ similar matrices are the conjugates (see \textit{conjugation in Group Theory}: \ref{def:conjugation}) but in subgroups of $GL_n(\F{})$ the definition of conjugacy may be more restrictive.
+		}
+		\boxeddefinition{\textbf{(Matrix Equivalence)} If $A$ and $B$ are two \textit{rectangular} ${ m \times n }$ matrices then they are said to be \textit{equivalent} iff there exists an ${ n \times n }$ invertible matrix $P$ and an ${ m \times m }$ invertible matrix $Q$ such that,
+			\[ AP = QB \iff A = QB\inv{P}. \]
+			
+			Equivalent matrices represent the same linear transformation under two different choices of a pair of bases for the domain and codomain, with P and Q being the change of basis matrices.
+		}
+	
+	
+		\bigskip
+		\labeledProposition{Let $A$ be the matrix of a linear operator $T$ with respect to the basis $B$ of dimension $n$. The matrices $A'$ which represent $T$ with respect to other bases are those of the form,
+			\[ A' = PA\inv{P} \]
+			where ${ P \in GL_n(\F{}) }$.
+		}{operator_matrix_wrt_to_1_base_wrt_to_other_bases}
+		\begin{proof}
+			A linear operator is a specialization of a linear transformation where the domain and codomain are the same set so we can use the definition (\ref{def:matrix_of_lin_transform_wrt_bases}) of the matrix of a linear transformation \wrt to two different bases and simply set the two bases to the same set $B$. This produces,
+			\[ T(\x) = A\x_B = \b_B \]
+			so that,
+			\[ [B]A = [T(\b_1) \cdots T(\b_n)] \iff A = \inv{[B]}[T(\b_1) \cdots T(\b_n)]. \]		
+			Now let there be another basis $B'$ related to $B$ by,
+			\[ [B] = [B']P \iff [B]\inv{P} = [B'], \]
+			\[ P\x_B = \x_{B'}. \]
+			To define a matrix $A'$ that performs the same linear transformation as $A$ \wrt to the basis $B'$ we need,
+			\[ T(\x) = A'\x_{B'} = \b_{B'} \]
+			and
+			\[ [B']A' = [T(\b_1') \cdots T(\b_n')] \iff A' = \inv{[B']}[T(\b_1') \cdots T(\b_n')]. \]
+			If we have the vectors of $B'$ encoded in $B$-coordinates then we can use the transformed version of the basis $B$ to produce the transformed version of the basis $B'$,
+			\[ [T(\b_1') \cdots T(\b_n')] = [T(\b_1) \cdots T(\b_n)]\inv{[B]}[B'] = [T(\b_1) \cdots T(\b_n)]\inv{P}. \]
+			If we now note that,
+			\[ A = \inv{[B]}[T(\b_1) \cdots T(\b_n)] \eqand A' = \inv{[B']}[T(\b_1') \cdots T(\b_n')]  \]
+			then,
+			\begin{align*}
+				&& A' &= \inv{[B']}[T(\b_1) \cdots T(\b_n)]\inv{P} \\
+				&\iff & A' &= \inv{[B']}[B]A\inv{P} &\sidecomment{} \\
+				&\iff & A' &= PA\inv{P}. &\sidecomment{} \qedhere
+			\end{align*}
+		\end{proof}
+		
+		
+		\biggerskip
+		\subsubsubsection{Intuition of Similar Matrices}
+		\[ A' = PA\inv{P} \iff A'P = PA \]
+		$P$ is the change of basis matrix such that ${ \x_{B'} = P\x_B }$. So $P$ is $B_{B'}$ the basis vectors of $B$ \wrt to $B'$. Another way of looking at it: ${ P = \inv{[B']}[B] }$ so it decodes coordinates in $B$-coords to standard coordinates and then encodes them into $B'$-coords. Meanwhile $A$ transforms the basis vectors of $B$ and then encodes the result in $B$-coords so the schematic of $A$ is ${ A = \inv{[B]}[T(B)] }$.\\
+		So 
+		\[ PA = P\inv{[B]}[T(B)] = \inv{[B']}[B]\inv{[B]}[T(B)] = \inv{[B']}[T(B)]. \]
+		By similar reasoning the schematic of $A'$ is ${ A' = \inv{[B']}[T(B')] }$. But also we have,
+		\[ A' = PA\inv{P} = (\inv{[B']}[B])(\inv{[B]}[T(B)])(\inv{[B]}[B']) = \inv{[B']}[T(B)]\inv{[B]}[B'] \]
+		so that,
+		\begin{align*}
+			&& \inv{[B']}[T(B')] &= \inv{[B']}[T(B)]\inv{[B]}[B'] \\
+			&\iff & [T(B')] &= [T(B)]\inv{[B]}[B']. &\sidecomment{} \\
+		\end{align*}
+		What this last result is saying is that if we take the basis vectors of $B'$ and encode them in $B$-coordinates and then apply the result to the transformed basis of $B$ then the result is the transformed basis of $B'$ defined in standard coordinates.\\\\
+		So, we have,
+		\[ A'P = PA = \inv{[B']}[T(B)] \]
+		\[ \inv{P}A' = A\inv{P} = \inv{[B]}[T(B)]\inv{[B]}[B'] = \inv{[B]}[T(B')]. \]
+		
+		
+		\bigskip
+		\begin{tcolorbox}[breakable,enhanced jigsaw,colframe=white,colback=white,boxrule=0pt,arc=0pt,left=0pt,right=0pt,top=0pt,bottom=0pt]
+			\labeledTheorem{If $A$ is similar to a matrix ${ \tilde{A} = \inv{P}AP }$ then 
+				\[ A^n = (P \tilde{A} \inv{P})^n = P \tilde{A}^n \inv{P}. \]
+			}{exponentiation-of-similar-matrices}
+			\begin{proof}
+				Remembering that matrix multiplication is not, in general, commutative,
+				\begin{align*}
+					&& A^n &= (P \tilde{A} \inv{P})(P \tilde{A} \inv{P})\cdots(P \tilde{A} \inv{P}) \\
+					&&  &= P \tilde{A} (\inv{P})(P) \tilde{A} (\inv{P}P) \cdots (\inv{P}P) \tilde{A} \inv{P} \\
+					&&  &= P \tilde{A}^n \inv{P}. \qedhere
+				\end{align*}
+			\end{proof}
+		\end{tcolorbox}
+		
+		\bigskip
+		\labeledProposition{Similarity of matrices is an equivalence relation.}{matrix_similarity_is_equiv_relation}
+		\begin{proof}
+			For any ${ M,N \in GL_n(\F{}) }$, similarity is an equivalence relation because of the following properties.
+			
+			\paragraph{\small{Reflexivity:}}
+			\begin{align*}
+				& N = I^{-1}NI \\
+				\therefore \; & N \sim N
+			\end{align*}
+			
+			\paragraph{\small{Symmetry:}}
+			\begin{align*}
+				& & N &= P^{-1}MP \\
+				&\iff & NP^{-1} &= P^{-1}M(PP^{-1}) \\
+				&\iff & NP^{-1} &= P^{-1}M \\
+				&\iff & PNP^{-1} &= (PP^{-1})M \\
+				&\iff & PNP^{-1} &= M \\
+				&\iff & R^{-1}NR &= M,\;\; R \in X\\
+				&\;\;\therefore & N \sim M &\iff M \sim N
+			\end{align*}
+			
+			\paragraph{\small{Transitivity:}}
+			\begin{align*}
+				& & N &= P^{-1}MP,\;\; M = Q^{-1}AQ \\
+				&\implies & N &= P^{-1}(Q^{-1}AQ)P \\
+				&\iff & N &= (P^{-1}Q^{-1})A(QP) \\
+				&\iff & N &= R^{-1}AR,\;\; R \in X\\
+				&\;\;\therefore & (N \sim M) & \wedge (M \sim Q) \iff (N \sim Q)
+			\end{align*}
+		\end{proof}
+		
+		\bigskip
+		\labeledProposition{Similar matrices have the same determinant.}{similar-matrices-have-same-determinant}
+		\begin{proof}
+			Let ${ A' = PA\inv{P} }$ where $P$ is a change of basis matrix. Then,
+			\begin{align*}
+				\det{A'} &= \det{PA\inv{P}}\\
+				&= (det{P}) \cdot (\det{A}) \cdot (\det{\inv{P}})\\
+				&= (\det{P}) \cdot (\det{A}) \cdot (1/\det{P})\\
+				&= \det{A}. \qedhere
+			\end{align*}
+		\end{proof}
+	
 	}
 
 
@@ -1631,6 +1971,17 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 			It's easy to see in fact, that this will happen with any permutation as the permutation of the $j_1, \cdots, j_n$, in the determinant of $A$, permutes the column indices while selecting in order from the rows whereas, in the determinant of $A^T$, it permutes the row indices while selecting from the columns in order. So, the net result is the same in both cases. Since each permutation of the n-tuple produces equal terms of the summation, the complete summation produced by all the permutations will be the same.\\
 			Therefore ${ det\,A^T = det\,A. }$
 		\end{proof}
+	
+	
+		
+		\biggerskip
+		\subsubsection{Principal Minors}
+		\boxeddefinition{If $A$ is an ${ n \times n }$ matrix then the \textit{principal minors} of $A$ are the $n$ determinants of the sub-matrices $A_k$ where $A_k$ is the matrix formed from the first $k$ rows and columns of $A$.\\
+			
+		That's to say, if the $i,j$-th element of $A$ is denoted $a_{ij}$ then $A_k$ is the matrix comprised of the entries
+			\[ \setc{ a_{ij} }{ 1 \leq i,j \leq k }. \]
+		In this case, the eigenvalue $t$ could be any real number and so the principal minors method has failed to determine its sign.
+		}\label{def:principal-minors}
 	}
 
 	\pagebreak
