--- a/tex/TODO.txt
+++ b/tex/TODO.txt
@@ -2,6 +2,7 @@ AMA
 ---
 
 - Review Further Calculus
+- Check last year's exam (50% marks available for convergence of series of real numbers?)
 
 
 FLA
